--- a/2 Ano/Metodos Numericos/Soluciones/Practica 4.lyx
+++ b/2 Ano/Metodos Numericos/Soluciones/Practica 4.lyx
@@ -239,17 +239,17 @@ Aplicarlo para resolver los siguientes sistemas
 \end_inset
 
 
-\begin_inset Formula $\begin{pmatrix}1 & 1 & 0 & 3\\
-2 & 1 & -1 & 1\\
-3 & -1 & -1 & 2\\
--1 & 2 & 3 & -1
+\begin_inset Formula $\begin{pmatrix}1 & -1 & 2 & -1\\
+2 & -2 & 3 & -3\\
+1 & 1 & 1 & 0\\
+1 & -1 & 4 & 3
 \end{pmatrix}$
 \end_inset
 
 , 
-\begin_inset Formula $b=\begin{pmatrix}4\\
-1\\
--3\\
+\begin_inset Formula $b=\begin{pmatrix}-8\\
+-20\\
+-2\\
 4
 \end{pmatrix}$
 \end_inset
@@ -262,18 +262,18 @@ Aplicarlo para resolver los siguientes sistemas
 \end_inset
 
 
-\begin_inset Formula $\begin{pmatrix}1 & 1 & 0 & 3\\
+\begin_inset Formula $\begin{pmatrix}1 & 1 & 0 & 4\\
 2 & 1 & -1 & 1\\
-3 & -1 & -1 & 2\\
--1 & 2 & 3 & -1
+4 & -1 & -2 & 2\\
+3 & -1 & -1 & 2
 \end{pmatrix}$
 \end_inset
 
 , 
-\begin_inset Formula $b=\begin{pmatrix}4\\
+\begin_inset Formula $b=\begin{pmatrix}2\\
 1\\
--3\\
-4
+0\\
+-3
 \end{pmatrix}$
 \end_inset
 
@@ -308,9 +308,98 @@ Soluciones
 \end_layout
 
 \begin_layout Enumerate
-COMPLETAR.
+\begin_inset space ~
+\end_inset
+
+
 \end_layout
 
+\begin_deeper
+\begin_layout Standard
+\begin_inset listings
+lstparams "language=Scilab"
+inline false
+status open
+
+\begin_layout Plain Layout
+
+function [x, a] = gausselim(A, b)
+\end_layout
+
+\begin_layout Plain Layout
+
+    a = [A b];
+\end_layout
+
+\begin_layout Plain Layout
+
+    [nA, mA] = size(A)
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+    for k = 1:nA-1
+\end_layout
+
+\begin_layout Plain Layout
+
+        for i = k+1:nA
+\end_layout
+
+\begin_layout Plain Layout
+
+            for j = k+1:nA+1
+\end_layout
+
+\begin_layout Plain Layout
+
+                a(i, j) = a(i, j) - a(k, j) * a(i, k) / a(k, k);
+\end_layout
+
+\begin_layout Plain Layout
+
+            end;
+\end_layout
+
+\begin_layout Plain Layout
+
+        end;
+\end_layout
+
+\begin_layout Plain Layout
+
+    end;
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+    x = superior(a(:,1:mA), a(:,mA+1))
+\end_layout
+
+\begin_layout Plain Layout
+
+    a = [triu(a(:,1:mA)), a(:,mA+1)]
+\end_layout
+
+\begin_layout Plain Layout
+
+endfunction
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_deeper
 \begin_layout Enumerate
 \begin_inset space ~
 \end_inset
@@ -320,7 +409,10 @@ COMPLETAR.
 
 \begin_deeper
 \begin_layout Enumerate
-COMPLETAR.
+\begin_inset Formula $x=\begin{pmatrix}-1 & 2 & 0 & 1\end{pmatrix}^{T}$
+\end_inset
+
+.
 \end_layout
 
 \begin_layout Enumerate
@@ -328,7 +420,10 @@ COMPLETAR.
 \end_layout
 
 \begin_layout Enumerate
-COMPLETAR.
+\begin_inset Formula $x=\begin{pmatrix}-4 & \nicefrac{2}{3} & -7 & \nicefrac{4}{3}\end{pmatrix}^{T}$
+\end_inset
+
+.
 \end_layout
 
 \end_deeper
@@ -343,6 +438,10 @@ COMPLETAR.
 \end_deeper
 \begin_layout Enumerate
 Suponga que queremos resolver los suigentes tres sistemas de ecuaciones:
+\begin_inset Newpage pagebreak
+\end_inset
+
+
 \begin_inset Formula 
 \[
 S1=\begin{cases}
@@ -483,7 +582,39 @@ Solución
 \end_layout
 
 \begin_layout Standard
-COMPLETAR.
+\begin_inset listings
+lstparams "language=Scilab"
+inline false
+status open
+
+\begin_layout Plain Layout
+
+function d = determinante(A)
+\end_layout
+
+\begin_layout Plain Layout
+
+    n = size(A, 1)
+\end_layout
+
+\begin_layout Plain Layout
+
+    [x a] = gausselim(A, zeros(n, 1))
+\end_layout
+
+\begin_layout Plain Layout
+
+    d = prod(diag(a))
+\end_layout
+
+\begin_layout Plain Layout
+
+endfunction
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \end_deeper
